--- a/.eslintrc
+++ b/.eslintrc
@@ -6,8 +6,9 @@
     "prettier",
     "plugin:jsx-a11y/recommended"
   ],
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
+    "requireConfigFile": false,
     "ecmaVersion": 8
   },
   "env": {
